--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -105,3 +105,71 @@ a {
     color-scheme: dark;
   }
 }
+
+
+/* Avinash myaccount css */
+#main{
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  padding: 20px;
+}
+#myaccountbox1{
+  /* border: 1px solid blue; */
+  
+  width: 80%;
+  margin: auto;
+}
+
+/* Avinash UserDetail css */
+#userdetailbox1{
+  display: flex;
+  /* border: 1px solid red; */
+}
+
+#userdetailbox2{
+  /* border: 1px solid blue; */
+  width: 50%;
+  padding: 10px;
+  margin-top: 15px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  
+}
+#userdetailbox3{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; 
+  width: 50%;
+}
+
+#userdetailbox3 img{
+  /* border: 1px solid red; */
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+}
+
+/* My Order css */
+#myorderbox1{
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+/* Media query Tablet form */
+@media screen and (max-width: 1070px){
+  #userdetailbox1{
+    display: flex;
+    flex-direction: column-reverse;
+    width: 200%;
+  }
+  #userdetailbox2{
+    margin-top: 15px;
+  }
+  
+}
+
+/* Media query Mobile form */
+
+@media screen and (max-width: 730px){
+  #pf{
+    font-size: large;
+  }
+}
